--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "0bb01cd9-8024-459a-a120-4e1b542ff020"
 authors = ["k3vda <kevindaeninck@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+
 [compat]
 julia = "1"
 
